--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,12 @@
 			<div class="container">
 				<!-- Nome do projeto -->
 				<a class="navbar-brand" href="#">Vreprosk</a>
+				
+				<!-- Pesquisa (implementar mais tarde)
+				<form class="form-inline float-xs-left">
+					<input class="form-control" type="text" placeholder="Pesquise aqui...">
+					<button class="btn btn-outline-success" type="submit">Pesquisa</button>
+				</form> -->
 			</div>
 		</nav>
 
