Adicionado menu da esquerda na navbar
Serve pra apontar as seções do site.

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,18 @@
 				<!-- Nome do projeto -->
 				<a class="navbar-brand" href="#">Vreprosk</a>
 				
+				<!-- Menu da Esquerda (seções do site?) -->
+				<ul class="nav navbar-nav float-xs-left">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Blog <span class="sr-only">(atual)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Fórum</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Wiki</a>
+					</li>
+				</ul>
 				<!-- Pesquisa (implementar mais tarde)
 				<form class="form-inline float-xs-left">
 					<input class="form-control" type="text" placeholder="Pesquise aqui...">
