--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 				<!-- Nome do projeto -->
 				<a class="navbar-brand" href="#">Vreprosk</a>
 				
-				<!-- Menu da Esquerda (seções do site?) -->
+				<!-- Menu da esquerda (seções do site?) -->
 				<ul class="nav navbar-nav float-xs-left">
 					<li class="nav-item active">
 						<a class="nav-link" href="#">Blog <span class="sr-only">(atual)</span></a>
@@ -31,6 +31,22 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Wiki</a>
+					</li>
+				</ul>
+				
+				<!-- Menu da direita (usuário logado) TODO: ADICIONAR DICAS PARA ACESSIBILIDADE -->
+				<ul class="nav navbar-nav float-xs-right">
+					<!-- Notificações -->
+					<li class="nav-item">
+						<a class="nav-link" href="#"><i class="fa fa-bell" aria-hidden="true"></i></a>
+					</li>
+					<!-- PMs -->
+					<li class="nav-item">
+						<a class="nav-link" href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+					</li>
+					<!-- Dropdown do usuário -->
+					<li class="nav-item">
+						<a class="nav-link" href="#"><i class="fa fa-user" aria-hidden="true"></i></a>
 					</li>
 				</ul>
 				<!-- Pesquisa (implementar mais tarde)
@@ -45,6 +61,9 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+		
+		<!-- Font Awesome -->
+		<script src="https://use.fontawesome.com/12fc458708.js"></script>
 		
 		<!-- Scripts auxiliares do projeto -->
 		<!-- Navbar (DESCOMENTAR SÓ QUANDO FOR FAZER O BANNER)
