--- a/src/index.html
+++ b/src/index.html
@@ -19,41 +19,24 @@
 			<!-- Conteúdo da Navbar -->
 			<div class="container">
 				<!-- Nome do projeto -->
-				<a class="navbar-brand" href="#">Vreprosk</a>
+				<!-- <a class="navbar-brand" href="#">Vreprosk</a> -->
 				
-				<!-- Menu da esquerda (seções do site?) -->
-				<ul class="nav navbar-nav float-xs-left">
+				<!-- Seções do site (ícone caso viewport pequeno, texto caso contrário -->
+				<ul class="nav navbar-nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Blog <span class="sr-only">(atual)</span></a>
+						<a class="nav-link" href="#"><span class="hidden-lg-up"><i class="fa fa-home fa-2x" aria-hidden="true"></i> </span><span class="hidden-md-down">Início</span><span class="sr-only"> (atual)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Fórum</a>
+						<a class="nav-link" href="#"><span class="hidden-lg-up"><i class="fa fa-users fa-2x" aria-hidden="true"></i> </span><span class="hidden-md-down">Fórum</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Wiki</a>
+						<a class="nav-link" href="#"><span class="hidden-lg-up"><i class="fa fa-book fa-2x" aria-hidden="true"></i> </span><span class="hidden-md-down">Enciclopédia</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#"><span class="hidden-lg-up"><i class="fa fa-flag fa-2x" aria-hidden="true"></i> </span><span class="hidden-md-down">Sobre</span></a>
 					</li>
 				</ul>
-				
-				<!-- Menu da direita (usuário logado) TODO: ADICIONAR DICAS PARA ACESSIBILIDADE -->
-				<ul class="nav navbar-nav float-xs-right">
-					<!-- Notificações -->
-					<li class="nav-item">
-						<a class="nav-link" href="#"><i class="fa fa-bell" aria-hidden="true"></i></a>
-					</li>
-					<!-- PMs -->
-					<li class="nav-item">
-						<a class="nav-link" href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-					</li>
-					<!-- Dropdown do usuário -->
-					<li class="nav-item">
-						<a class="nav-link" href="#"><i class="fa fa-user" aria-hidden="true"></i></a>
-					</li>
-				</ul>
-				<!-- Pesquisa (implementar mais tarde)
-				<form class="form-inline float-xs-left">
-					<input class="form-control" type="text" placeholder="Pesquise aqui...">
-					<button class="btn btn-outline-success" type="submit">Pesquisa</button>
-				</form> -->
+
 			</div>
 		</nav>
 
